--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,16 @@ project(Simple-p6-Setup)
 
 # ---Declare source files---
 file(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS src/*)
+file(GLOB_RECURSE COMMON_FILES CONFIGURE_DEPENDS src-common/*)
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
-target_include_directories(${PROJECT_NAME} PRIVATE include src)
+target_include_directories(${PROJECT_NAME} PRIVATE include src) 
+target_include_directories(${PROJECT_NAME} PRIVATE include src-common)
+
+# ---Add tinyobjloader library---
+add_subdirectory(tinyobjloader)
+
+# ---Link tinyobjloader library---
+target_link_libraries(${PROJECT_NAME} PRIVATE tinyobjloader)
 
 # ---Choose C++ version---
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
